# rubiks-cube-opengl

./: CMakeLists.txt
include/: arcball.hpp  circle.hpp  cubeRotateManager.hpp  cubieView.hpp  cylinder.hpp  light.hpp  material.hpp  primitiveMesh.hpp  rubiksCubeView.hpp  shader.h  sphere.hpp  square.hpp  sticker.hpp  texture.hpp  transformCube.hpp  vertexBufferManager.hpp  windowWrapper.hpp
include/glad/: glad.h
shader/: simple.fs  simple.vs
src/: arcball.cpp  circle.cpp  cubeRotateManager.cpp  cubieView.cpp  cylinder.cpp  glad.c  light.cpp  main.cpp  material.cpp  primitiveMesh.cpp  rubiksCubeView.cpp  shader.cpp  sphere.cpp  square.cpp  sticker.cpp  texture.cpp  transformCube.cpp  vertexBufferManager.cpp  windowWrapper.cpp
